fixes overflows and annotation resize

--- a/src/components/discovery-annotation/discovery-annotation.scss
+++ b/src/components/discovery-annotation/discovery-annotation.scss
@@ -14,11 +14,12 @@
   }
 
   .chart-area {
-   // padding-top: 20px;
+    // padding-top: 20px;
     position: absolute;
     top: 20px;
     left: 0;
     width: 100%;
+    z-index: 5;
   }
 
   .discovery-chart-spinner {
