--- a/src/components/discovery-dashboard/discovery-dashboard.scss
+++ b/src/components/discovery-dashboard/discovery-dashboard.scss
@@ -24,17 +24,14 @@
 
       .discovery-dashboard-tile {
         width: 100%;
-        height: 100%;
         border: var(--warp-view-tile-border, .1rem solid rgba(0, 0, 0, .075)) !important;
         box-shadow: var(--warp-view-tile-shadow, 0 0.125rem 0.25rem rgb(0 0 0 / 8%)) !important;
-        overflow-y: visible;
-        overflow-x: visible;
+        overflow: visible;
         background: var(--warp-view-tile-background);
-        position: relative;
+      //  position: relative;
 
-        &.annotations, &.plot {
-          overflow-y: auto;
-          overflow-x: hidden;
+        &.annotation, &.plot {
+          height: 100% !important;
         }
 
         & > div {
